--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -34,7 +34,14 @@
 			<p id="player-song-duration">{{songLengthAsStr}}</p>
 		</div>
 	</div>
-	<div id="sound-control">
-		<input type="range" (input)="changeVolume($event.target)" min="0" max="1" step=".001">
+	<div id="songs-control">
+		<button (click)="toggleVolume()">
+			<img src="../../assets/volume-off-icon.svg" *ngIf="volumeDisabled">
+			<img src="../../assets/volume-zero-icon.svg" *ngIf="!volumeDisabled && audio.volume == 0">
+			<img src="../../assets/volume-low-icon.svg" *ngIf="!volumeDisabled && audio.volume > 0 && audio.volume < .3">
+			<img src="../../assets/volume-mid-icon.svg" *ngIf="!volumeDisabled && audio.volume > .3 && audio.volume < .7">
+			<img src="../../assets/volume-high-icon.svg" *ngIf="!volumeDisabled && audio.volume > .7">
+		</button>
+		<input type="range" (input)="changeVolume($event.target)" min="0" max="1" step=".001" [value]="audio.volume" id="volume-slider" [style.backgroundImage]="'linear-gradient(to right, #AAA 0%, #AAA ' + (audio.volume) * 100 + '%, #555 ' + (audio.volume) * 100 + '%, #555 100%)'">
 	</div>
 </div>
