--- a/frontend/src/app/components/player/player.component.scss
+++ b/frontend/src/app/components/player/player.component.scss
@@ -116,10 +116,48 @@ $bg_color: #111;
 		}
 	}
 
-	#sound-control {
+	#songs-control {
 		width: 20%;
 		display: flex;
 		align-items: center;
 		justify-content: right;
+		cursor: pointer;
+
+		#volume-slider {
+			height: 5px;
+			width: 40%;
+			cursor: pointer;
+			outline: none;
+			-webkit-appearance: none;
+			margin-top: -1px;
+
+			&::-webkit-slider-runnable-track { 
+				height: 100%;
+			}
+			&::-moz-range-track {
+				height: 100%;
+			}
+
+			&::-webkit-slider-thumb {
+				appearance: none;
+				height: 0;
+				width: 4px;
+				background-color: lightgray;
+			}
+			&::-moz-range-thumb {
+				height: 0;
+				width: 4px;
+				background-color: lightgray;	
+			}
+		}
+
+		button {
+			border: none;
+			background: none;
+			img {
+				height: 20px;
+				filter: invert(100%);
+			}
+		}
 	}
 }
