--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet>
-  <app-player [currentSong]="song"></app-player>
+  <app-player [songsQueue]="queue"></app-player>
 </router-outlet>
