Feat: Implemented basic routing + navbar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,9 @@
-<router-outlet>
-  <app-player [songsQueue]="queue"></app-player>
-</router-outlet>
+<div class="interface">
+  <!--Navbar component-->
+  <app-navbar></app-navbar>
+
+  <!--Affiche la bonne page-->
+  <router-outlet class="main"></router-outlet>
+</div>
+<!--Player component-->
+<app-player [songsQueue]="queue"></app-player>
