--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -10,16 +10,26 @@ html, body {
     width: 100%;
 }
 
-
-
 .interface {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    
+    grid-template-columns: 0.05fr 0.95fr;
+    grid-template-rows: 1fr;
+
+    grid-template-areas: 
+        "navbar main";
+
+    min-height: 100vh;
+    max-height: 100vh;
+}
+
+.nav {
+    grid-area: navbar;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
+
+    grid-area: main;
 
     overflow-x: hidden;
     overflow-y: scroll;
@@ -28,5 +38,19 @@ html, body {
         display: none;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .interface {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.9fr 0.1fr;
+
+        grid-template-areas: 
+            "main"
+            "navbar";
+        height: 85vh;
+    }
+}
+
+
 
 
