--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -5,15 +5,22 @@
 }
 
 .navbar-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start ;
+    align-items: center;
+
     background-color: #111;
-    min-height: 100vh;
-    width: 4vw;
+    height: 100%;
+    width: 100%;
     padding: 10px;
     gap: 10px;
 
+
     .tooltip {
         position: relative;
-        display: inline-block;
+        display: flex;
+        justify-content: center;
         border-bottom: 1px dotted black;
 
         .tooltiptext {
@@ -28,14 +35,14 @@
 
             position: absolute;
             z-index: 1;
+            left: 100%;
 
             transition: opacity 0.5s ease-in-out;
 
-            /*shadow drop effect only down*/
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         }
         img {
-            width: 100%;
+            width: 60%;
         }
 
         &:hover {
@@ -44,5 +51,19 @@
                 opacity: 1;
             }
         }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .navbar-container {
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        .tooltip {
+            img {
+                height: 10vh;
+                width: auto;
+            }
+        } 
     }
 }
