--- a/frontend/src/app/components/player/player.component.scss
+++ b/frontend/src/app/components/player/player.component.scss
@@ -10,7 +10,7 @@ $bg_color: #111;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	height: 100px;
+	height: 15vh;
 
 	#song-infos {
 		display: flex;
