--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -21,7 +21,8 @@
         position: relative;
         display: flex;
         justify-content: center;
-        border-bottom: 1px dotted black;
+        cursor: pointer;
+        margin-bottom: 10px;
 
         .tooltiptext {
             visibility: hidden;
@@ -41,11 +42,18 @@
 
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         }
+
         img {
             width: 60%;
+            filter: invert(80%);
         }
 
         &:hover {
+    
+            img {
+                filter: invert(100%);
+            }
+    
             .tooltiptext {
                 visibility: visible;
                 opacity: 1;
