--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,9 @@
 body {
 	margin: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Sans+Pro&display=swap');
+
+* {
+	font-family: 'Source Sans Pro', 'Montserrat', sans-serif;
+}
