Changed player position to grid

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="main">
     <router-outlet></router-outlet>
   </div>
-  
+
+  <!--Player component-->
+  <app-player class="player" [queue]="queue"></app-player>
 </div>
-<!--Player component-->
-<app-player [queue]="queue"></app-player>
