--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -34,6 +34,9 @@
 	</div>
 	<div id="songs-control">
 		<button>
+			<img src="../../assets/loop-icon.svg">
+		</button>
+		<button>
 			<img src="../../assets/playlist-icon.svg">
 		</button>
 		<button (click)="toggleVolume()">
