--- a/frontend/src/app/components/player/player.component.scss
+++ b/frontend/src/app/components/player/player.component.scss
@@ -4,8 +4,8 @@ $bg_color: #111;
 	background-color: $bg_color;
 	color: white;
 	padding: 10px;
-	width: calc(100% - 20px);
-	position: absolute;
+	width: 100%;
+	box-sizing: border-box;
 	bottom: 0;
 	display: flex;
 	align-items: center;
@@ -51,6 +51,7 @@ $bg_color: #111;
 				cursor: pointer;
 
 				img {
+					transition-duration: .1s;
 					filter: invert(80%);
 					height: 30px;
 
@@ -161,6 +162,7 @@ $bg_color: #111;
 			cursor: pointer;
 
 			img {
+				transition-duration: .1s;
 				filter: invert(80%);
 				height: 20px;
 
