--- a/frontend/src/app/components/player/player.component.scss
+++ b/frontend/src/app/components/player/player.component.scss
@@ -161,6 +161,17 @@ $bg_color: #111;
 			background: none;
 			cursor: pointer;
 
+			&#loop-type {
+				p {
+					color: white;
+					position: absolute;
+					margin-top: -30px;
+					margin-left: -2px;
+					border-radius: 100%;
+					background-color: $bg_color;
+				}
+			}
+
 			img {
 				transition-duration: .1s;
 				filter: invert(80%);
