--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -37,7 +37,7 @@
 			<img src="../../assets/loop-icon.svg" [style.borderBottom]="(loopType == 0) ? 'none' : '1px solid black'">
 			<p *ngIf="loopType == 2">1</p>
 		</button>
-		<button>
+		<button (click)="displayQueue()">
 			<img src="../../assets/playlist-icon.svg">
 		</button>
 		<button (click)="toggleVolume()">
