Made player responsive (changed to grid) and reworked whole app responsiveness

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -47,12 +47,12 @@ html, body {
 @media screen and (max-width: 800px) {
     .interface {
         grid-template-columns: 1fr;
-        grid-template-rows: 0.9fr 0.1fr;
+        grid-template-rows: 8vh 74vh 18vh;
 
         grid-template-areas: 
+            "navbar"
             "main"
-            "navbar";
-        height: 85vh;
+            "player";
     }
 }
 
