--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -68,8 +68,12 @@
         width: 100%;
         height: 100%;
         .tooltip {
+            height: 100%;
+            align-items: center;
+            margin: 0;
+            margin-right: 10px;
             img {
-                height: 10vh;
+                height: 80%;
                 width: auto;
             }
         } 
