player responsive ; navbar at the top on mobile

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,4 +1,3 @@
-/*Reset the CSS */ 
 * {
     margin: 0;
     padding: 0;
@@ -13,15 +12,15 @@ html, body {
 .interface {
     display: grid;
     
-    grid-template-columns: 0.5fr 9.5fr;
-    grid-template-rows: 1fr 0.1fr;
+    grid-template-columns: 0.05fr 0.95fr;
+    grid-template-rows: 1fr;
 
     grid-template-areas: 
         "navbar main"
         "player player";
 
-    height: 100vh;
-
+    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .nav {
@@ -47,12 +46,11 @@ html, body {
 @media screen and (max-width: 800px) {
     .interface {
         grid-template-columns: 1fr;
-        grid-template-rows: 8fr 1fr 1fr;
+        grid-template-rows: 8vh 74vh 18vh;
 
         grid-template-areas: 
-            "main"
             "navbar"
+            "main"
             "player";
-        height: 100vh;
     }
 }
