--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,56 +1,55 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html, body {
-    height: 100%;
-    width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .interface {
-    display: grid;
-    
-    grid-template-columns: 0.05fr 0.95fr;
-    grid-template-rows: 1fr;
+	display: grid;
+	
+	grid-template-columns: 0.05fr 0.95fr;
+	grid-template-rows: 1fr;
 
-    grid-template-areas: 
-        "navbar main"
-        "player player";
+	grid-template-areas: 
+		"navbar main"
+		"player player";
 
-    min-height: 100vh;
-    max-height: 100vh;
+	height: 100vh;
 }
 
 .nav {
-    grid-area: navbar;
+	grid-area: navbar;
 }
 
 .main {
 
-    grid-area: main;
+	grid-area: main;
 
-    overflow-x: hidden;
-    overflow-y: scroll;
-    
-    &::-webkit-scrollbar {
-        display: none;
-    }
+	overflow-x: hidden;
+	overflow-y: scroll;
+	
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 .player {
-    grid-area: player;
+	grid-area: player;
 }
 
 @media screen and (max-width: 800px) {
-    .interface {
-        grid-template-columns: 1fr;
-        grid-template-rows: 8vh 74vh 18vh;
+	.interface {
+		grid-template-columns: 1fr;
+		grid-template-rows: 74vh 18vh 8vh;
 
-        grid-template-areas: 
-            "navbar"
-            "main"
-            "player";
-    }
+		grid-template-areas: 
+			"main"
+			"player"
+			"navbar";
+	}
 }
