--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -64,9 +64,12 @@
 
 @media only screen and (max-width: 800px) {
     .navbar-container {
+
         flex-direction: row;
         width: 100%;
         height: 100%;
+    justify-content: space-around;
+
         .tooltip {
             height: 100%;
             align-items: center;
