--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -23,6 +23,7 @@
         justify-content: center;
         cursor: pointer;
         margin-bottom: 10px;
+        width: 100%;
 
         .tooltiptext {
             visibility: hidden;
