--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -37,7 +37,7 @@
 			<img src="../../assets/loop-icon.svg" [style.borderBottom]="(loopType == 0) ? 'none' : '2px solid black'">
 			<p *ngIf="loopType == 2">1</p>
 		</button>
-		<button (click)="displayQueue()">
+		<button (click)="toggleQueueVisibility()">
 			<img src="../../assets/playlist-icon.svg">
 		</button>
 		<button (click)="toggleVolume()">
@@ -48,5 +48,6 @@
 			<img src="../../assets/volume-high-icon.svg" *ngIf="!volumeDisabled && audio.volume > .7">
 		</button>
 		<input type="range" (input)="changeVolume($event.target)" min="0" max="1" step=".001" [value]="audio.volume" id="volume-slider" [style.backgroundImage]="'linear-gradient(to right, #AAA 0%, #AAA ' + (audio.volume) * 100 + '%, #555 ' + (audio.volume) * 100 + '%, #555 100%)'">
+		<app-queue id="queue" [queue]="queue" [class.visible]="!visibleQueue" [class.invisible]="visibleQueue"></app-queue>
 	</div>
 </div>
