--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,34 @@
 body {
 	margin: 0;
+	overflow: hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Sans+Pro&display=swap');
 
 * {
 	font-family: 'Source Sans Pro', 'Montserrat', sans-serif;
+}
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	background: #AAA; 
+}
+ 
+::-webkit-scrollbar-thumb {
+	background: #555;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #333; 
+}
+
+@media screen and (max-width: 800px) {
+	html {
+		max-width: 100vw;
+		max-height: 100vh;
+		overflow: hidden;
+	}
 }
