--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -49,6 +49,6 @@
 			<img src="../../assets/volume-high-icon.svg" *ngIf="!volumeDisabled && audio.volume > .7">
 		</button>
 		<input type="range" (input)="changeVolume($event.target)" min="0" max="1" step=".001" [value]="audio.volume" id="volume-slider" [style.backgroundImage]="'linear-gradient(to right, #AAA 0%, #AAA ' + (audio.volume) * 100 + '%, #555 ' + (audio.volume) * 100 + '%, #555 100%)'">
-		<app-queue id="queue" [queue]="queue" [class.visible]="visibleQueue" [class.invisible]="!visibleQueue"></app-queue>
+		<app-queue id="queue" (loadCurrentSongInPlayer)="loadCurrentSong(currentlyPlaying)" [queue]="queue" [class.visible]="visibleQueue" [class.invisible]="!visibleQueue"></app-queue>
 	</div>
 </div>
