--- a/frontend/src/app/components/queue/queue.component.html
+++ b/frontend/src/app/components/queue/queue.component.html
@@ -12,6 +12,10 @@
 					{{song.album.artist.username}}
 				</h4>
 			</div>
+			<div class="queue-reorder">
+				<img src="../../assets/triangle-icon.svg" class="move-song-before" (click)="moveSongInQueue($event, index, -1)">
+				<img src="../../assets/triangle-icon.svg" class="move-song-after" (click)="moveSongInQueue($event, index, +1)">
+			</div>
 		</div>
 	</div>
 </div>
