Feat: Added trendy tracks display to artist page

--- a/frontend/src/app/components/album/album.component.html
+++ b/frontend/src/app/components/album/album.component.html
@@ -1,5 +1,7 @@
 <div class="album">
-    <img class="cover" [src]="album.cover" alt="{{album.name}} cover">
+    <div class="img-zone">
+        <img class="cover" [src]="album.cover" alt="{{album.name}} cover">
+    </div>
     <div class="album-infos">
         <p class="title"> {{album.name}} </p>
         <p class="date"> {{album.releaseYear}} </p>
