--- a/frontend/src/app/components/album/album.component.scss
+++ b/frontend/src/app/components/album/album.component.scss
@@ -8,22 +8,28 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    gap: 20px;
 
     padding: 10px;
-    background-color: #111;
+    background-color: #181818;
 
-    border-radius: 8px;
-    
-    .cover {
-        width: 200px;
-        height: 200px;
-        border-radius: 8px;
+    border-radius: 7px;
+
+    transition: background-color 0.1s ease-in-out;
+    .img-zone {
         padding: 10px;
 
+        .cover {
+            width: 200px;
+            height: 200px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+        }    
     }
     
     .album-infos {
-        display: block;
+        display: flex;
+        flex-direction: column;
         font-family: 'Roboto', sans-serif;
         padding-left: 10px;
 
@@ -51,9 +57,8 @@
         width: 50px;
 
         padding:10px;
-        padding-left: 15px;
 
-        transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+        transition: transform 0.1s ease-in-out, background-color 0.1s ease-in-out;
 
         img {
             height: 100%;
@@ -64,6 +69,10 @@
         &:active {
             transform: scale(0.9);
             background: rgb(30, 105, 30);
+
+            img {
+                filter: brightness(0.8);
+            }
 
         }
     }
