--- a/frontend/src/app/pages/artist-page/artist-page.component.html
+++ b/frontend/src/app/pages/artist-page/artist-page.component.html
@@ -1,25 +1,37 @@
-<div class="artist-infos">
-    <h1 id="artist-name">{{artist.username}}</h1>
-    <p id="monthly-audience">108 837 113 auditeurs mensuels</p>
-    <img class="back" [src]="artist.banner"> 
-</div>
-<div class="more">
-    <div>
-        <h2>Discographie</h2>
-        <div class="list-style1">
-            <div *ngFor="let album of artistAlbums">
-                <app-album [album]="album"></app-album>
-            </div>
-        </div>
+<div class="artist-page">
+    <div class="artist-infos">
+        <h1 id="artist-name">{{artist.username}}</h1>
+        <p id="monthly-audience">108 837 113 auditeurs mensuels</p>
+        <img class="back" [src]="artist.banner"> 
     </div>
+    <div class="more">
 
-    <div>
-        <h2>Discographie</h2>
-        <div class="list-style1">
-            <div *ngFor="let album of artistAlbums">
-                <app-album [album]="album"></app-album>
+        <div class="section">
+            <h2>Populaire</h2>
+            <div class="list-style2">
+                <div *ngFor="let song of artistSongs; let index = index">
+                    <app-song [song]="song" [index]="index+1"></app-song>
+                </div>
             </div>
         </div>
+
+        <div class="section">
+            <h2>Discographie</h2>
+            <div class="list-style1">
+                <div *ngFor="let album of artistAlbums">
+                    <app-album [album]="album"></app-album>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>Similar</h2>
+            <div class="list-style1">
+                <div *ngFor="let album of artistAlbums">
+                    <app-album [album]="album"></app-album>
+                </div>
+            </div>
+        </div>
+        
     </div>
-    
 </div>
