--- a/frontend/src/app/pages/artist-page/artist-page.component.scss
+++ b/frontend/src/app/pages/artist-page/artist-page.component.scss
@@ -1,58 +1,75 @@
-.artist-infos {
-    display: flex;
-    flex-direction: column;
-
-    padding: 10px;
-    gap: 10px;
-
-    /*align everything text perfectly left*/
-    align-items: flex-start;
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.artist-infos > img.back {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    filter: blur(2px);
-}
-.artist-infos > h1 {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 4em;
-    font-style: bold;
-}
-
-.artist-infos > p {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-}
-
-.list-style1 {
-    
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-.more {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: flex-start;
-    padding: 10px;
-    background: linear-gradient(180deg, rgba(16,29,27,1) 0%, rgba(18,18,18,1) 100%);
-
-    div {
-        h2 {
+.artist-page{
+    .artist-infos {
+        margin-top: 200px;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        gap: 10px;
+        align-items: flex-start;
+        img.back {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            filter: blur(2px);
+        }
+        p {
             color: white;
             font-family: 'Roboto', sans-serif;
-            font-size: 2em;
-            font-style: bold;   
+        }
+            
+        h1 {
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            font-size: 4em;
+            font-style: bold;
+        }
+    }
+    .list-style1 {
+    
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .list-style2 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+    .more {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+        padding: 10px;
+        /*background: linear-gradient(180deg, rgba(16,29,27,1) 0%, rgba(18,18,18,1) 100%);*/
+        background: #1c1c1c;
+    
+        div {
+            h2 {
+                color: white;
+                font-family: 'Roboto', sans-serif;
+                font-size: 2em;
+                font-style: bold;   
+            }
+        }
+
+        .section {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
     }
 }
+
+
