--- a/frontend/src/app/components/queue/queue.component.scss
+++ b/frontend/src/app/components/queue/queue.component.scss
@@ -38,14 +38,16 @@
 				}
 			}
 
-			.queue-reorder {
+			.queue-controler {	
 				margin-left: auto;
-				margin-right: 10px;
 				display: flex;
-				flex-direction: column;
+				align-items: center;
+
+				.delete-song-btn {
+				}
 
 				img {
-					margin: 5px 0;
+					margin: 5px 0 5px 10px;
 					filter: invert(80%);
 					height: 15px;
 					width: auto;
@@ -55,11 +57,21 @@
 					&:hover {
 						filter: invert(100%);
 					}
+				}
 
-					&.move-song-after {
-						transform: rotate(180deg);
+				.queue-reorder {
+					margin-left: auto;
+					margin-right: 10px;
+					display: flex;
+					flex-direction: column;
+
+					img {
+						&.move-song-after {
+							transform: rotate(180deg);
+						}
 					}
 				}
+
 			}
 		}
 	}
