--- a/frontend/src/app/components/queue/queue.component.scss
+++ b/frontend/src/app/components/queue/queue.component.scss
@@ -2,14 +2,27 @@
 	overflow-y: scroll;
 	background-color: #222;
 
-	&.not-visible {
-		height: 0;
-		width: 0;
-	}
+	#queue-title {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 
-	h2 {
-		padding-left: 15px;
-		letter-spacing: .5px;
+		h2 {
+			padding-left: 15px;
+			letter-spacing: .5px;
+		}
+
+		img {
+			margin-right: 15px;
+			height: 30px;
+			cursor: pointer;
+			filter: invert(80%);
+
+			&:hover {
+				filter: invert(100%);
+			}
+		}
+
 	}
 
 	#queue-songs {
