Feat: Implemented basis of song page

--- a/frontend/src/app/pages/song-page/song-page.component.html
+++ b/frontend/src/app/pages/song-page/song-page.component.html
@@ -1,1 +1,31 @@
-<p>song-page works!</p>
+<div class="song-page"> 
+    <div class="song-header">
+        <div class="cover">
+            <img src="https://i.scdn.co/image/ab67616d00001e02c7d6fe09dfe4af1580e59705" alt="">
+        </div>
+        <div class="text">
+            <h1 class="title">Blinding Lights</h1>
+            <div class="infos">
+                <a class="artist"> The semaine</a>
+                <p class="dot">-</p>
+                <p class="date"> 2020 </p>
+                <p class="dot">-</p>
+                <p class="duration"> 3:20 </p>
+            </div>
+        </div> 
+    </div>
+    <div class="more-of-song">
+        <div class="actions">
+            <button class="play-button">
+                <img src="../../assets/play-icon-2.svg" alt="Play">
+            </button>
+
+            <button class="like-button">
+                <img src="../../assets/heart-icon.svg" alt="Like">
+            </button>
+        </div>
+        <div>
+            <h2>Popular</h2>
+        </div>
+    </div>
+</div>
