--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -22,7 +22,7 @@
         display: flex;
         justify-content: center;
         cursor: pointer;
-        margin-bottom: 10px;
+        margin: 15px 0;
         width: 100%;
 
         .tooltiptext {
