--- a/frontend/src/app/pages/song-page/song-page.component.scss
+++ b/frontend/src/app/pages/song-page/song-page.component.scss
@@ -5,15 +5,29 @@
 }
 
 .song-page {
+    position: relative;
     display: flex;
     flex-direction: column;
-
-    background-color: rgb(255, 153, 0);
-
     padding-top: 10px;
 
     min-height: 90vh;
 
+    .banner-img {
+        position: absolute;
+        top: -10%;
+        left: -10%;
+        width: 100%;
+        height: 100%;
+
+        z-index: -100;
+
+        img {
+            width: 120%;
+            height: 120%;
+            object-fit: cover;
+            filter: brightness(0.5) blur(100px);
+        }
+    }
     .song-header {
         display: flex;
         flex-direction: row;
