--- a/frontend/src/app/pages/song-page/song-page.component.scss
+++ b/frontend/src/app/pages/song-page/song-page.component.scss
@@ -8,7 +8,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
 
     min-height: 90vh;
 
@@ -35,6 +34,7 @@
         justify-content: left;
 
         padding: 10px;
+        margin-top: 10vh;
 
         .cover {
             display: flex;
@@ -80,51 +80,40 @@
 
         padding: 10px;
 
+
+        background: rgba(28, 28, 28, 0.8);
+
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+
         .actions {
             height: 10vh;
-            
-            .play-button {
-                background: rgb(47, 172, 47);
-        
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 10px;
+            gap: 10px;
+            padding-left: 45px;
+
+            //Remove default style from buttons
+            button{
                 border: none;
-                border-radius: 50%;
-                
-                position: relative;
-
-                height: 80%;
-                width: auto;
-
-                padding:10px;
-        
-                transition: transform 0.1s ease-in-out, background-color 0.1s ease-in-out;
-        
-                img {
-                    height: 100%;
-                    width: 100%;
-        
-                }
-        
-                &:active {
-                    transform: scale(0.9);
-                    background: rgb(30, 105, 30);
-        
-                    img {
-                        filter: brightness(0.8);
-                    }
-        
-                }
+                background: none;
             }
 
             .like-button {
-                background: none;
-                border: none;
-                        
-                height: 70px;
-                width: 70px;
-
                 img {
-                    height: 100%;
-                    width: 100%;
+                    width: 50px;
+                    height: 50px;
+                    object-fit: cover;
+                }
+            }
+
+            .play-button {
+                img {
+                    width: 50px;
+                    height: 50px;
+                    object-fit: cover;
                 }
             }
         }
