--- a/frontend/src/app/pages/song-page/song-page.component.scss
+++ b/frontend/src/app/pages/song-page/song-page.component.scss
@@ -5,36 +5,53 @@
 }
 
 .song-page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
 
-    min-height: 90vh;
+    position: relative;
+    display: grid;
+    grid-template-areas: 
+        "header"
+        "more";
+    grid-template-rows: 1fr 1.7fr;
+
+
+    height: 100%;
+
+    //Reset style of a tag
+    a {
+        text-decoration: none;
+        color: inherit;
+        
+        &:hover {
+            text-decoration: underline;
+            color: inherit;
+        }
+    }
 
     .banner-img {
         position: absolute;
-        top: -10%;
-        left: -10%;
-        width: 100%;
-        height: 100%;
+        top: -20%;
+        left: -40%;
+        width: 200%;
+        height: 120%;
+        overflow: hidden;
 
         z-index: -100;
 
         img {
-            width: 120%;
-            height: 120%;
+            width: 140%;
+            height: 140%;
             object-fit: cover;
             filter: brightness(0.5) blur(100px);
         }
     }
     .song-header {
+        grid-area: header;
         display: flex;
         flex-direction: row;
         align-items: flex-end;
         justify-content: left;
 
         padding: 10px;
-        margin-top: 10vh;
 
         .cover {
             display: flex;
@@ -73,10 +90,11 @@
         }
     }
     .more-of-song {
+        grid-area: more;
+
         display: flex;
         flex-direction: column;
         background: #1c1c1c;
-        min-height: 90vh;
 
         padding: 10px;
 
