Feat; Added arrows button to go back and forth

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
   <!--Affiche la bonne page-->
   <div class="main">
     <router-outlet></router-outlet>
+    <app-arrows-nav class="arrows-nav"></app-arrows-nav>
   </div>
 
   <!--Player component-->
