--- a/frontend/src/app/components/player/player.component.scss
+++ b/frontend/src/app/components/player/player.component.scss
@@ -55,7 +55,7 @@ $player_height: 12vh;
 		align-items: center;
 		justify-content: left;
 		height: 90%;
-		grid-areas: song-infos;
+		grid-area: song-infos;
 
 		img {
 			height: 90%;
