implemented shared queue service in order to interact with it everywhere

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,5 +8,5 @@
   </div>
 
   <!--Player component-->
-  <app-player #player class="player" [queue]="queue"></app-player>
+  <app-player #player class="player"></app-player>
 </div>
