--- a/frontend/src/app/components/queue/queue.component.html
+++ b/frontend/src/app/components/queue/queue.component.html
@@ -4,7 +4,7 @@
 		<img src="../../assets/close-icon.svg" (click)="toggleQueueVisibility.emit()">
 	</div>
 	<div id="queue-songs">
-		<div class="queue-element" *ngFor="let song of queue.songs; let index = index;" (click)="changeQueueSongIndex(index);" [style.backgroundColor]="(queue.currentSongIndex == index) ? '#333' : '#252525'">
+		<div class="queue-element" *ngFor="let song of getQueue().songs; let index = index;" (click)="changeQueueSongIndex(index);" [style.backgroundColor]="(getQueue().currentSongIndex == index) ? '#333' : '#252525'">
 			<p class="song-index">{{index + 1}}</p>
 			<img [src]="song.album.cover">
 			<div class="song-titles">
