now able to play an album from the album page and a song from the song page. TODO: play song from album page

--- a/frontend/src/app/pages/album-page/album-page.component.html
+++ b/frontend/src/app/pages/album-page/album-page.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="more-of-song">
         <div class="actions">
-            <button class="play-button">
+            <button class="play-button" (click)="addAlbumToQueue()">
                 <img src="../../assets/play-icon-2.svg" alt="Play">
             </button>
 
