reworked shared queue, now works on all current pages

--- a/frontend/src/app/components/song/song.component.html
+++ b/frontend/src/app/components/song/song.component.html
@@ -3,7 +3,7 @@
         <div class="index">
             <p>{{index}}</p>
         </div>
-        <button class="play">
+        <button class="play" (click)="playSong()">
             <img src="../../assets/play-icon-2.svg" alt="Play">
         </button>
     </div>
