--- a/frontend/src/app/components/song/song.component.scss
+++ b/frontend/src/app/components/song/song.component.scss
@@ -72,6 +72,7 @@
 
             border: none;
             background: none;
+            cursor: pointer;
 
             img {
                 transform: translate(-10px, 5px);
