--- a/frontend/src/app/pages/song-page/song-page.component.html
+++ b/frontend/src/app/pages/song-page/song-page.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="more-of-song">
         <div class="actions">
-            <button class="play-button" (click)="addSongToQueue()">
+            <button class="play-button" (click)="playSong()">
                 <img src="../../assets/play-icon-2.svg" alt="Play">
             </button>
 
