--- a/frontend/src/app/components/player/player.component.html
+++ b/frontend/src/app/components/player/player.component.html
@@ -14,16 +14,16 @@
 	<div id="player">
 		<div id="player-controls">
 			<button (click)="previousSong()">
-				<img src="../../assets/previous-icon.svg" class="songs-nav">
+				<img src="../../assets/previous-icon.svg" class="songs-nav" alt="previousSong">
 			</button>
 			<button (click)="resumeAudio()" *ngIf="!currentlyPlaying">
-				<img src="../../assets/play-icon.svg">
+				<img src="../../assets/play-icon.svg" alt="resumeSong">
 			</button>
 			<button (click)="pauseAudio()" *ngIf="currentlyPlaying">
-				<img src="../../assets/pause-icon.svg">
+				<img src="../../assets/pause-icon.svg" alt="pauseSong">
 			</button>
 			<button (click)="nextSong()">
-				<img src="../../assets/next-icon.svg" class="songs-nav">
+				<img src="../../assets/next-icon.svg" class="songs-nav" alt="nextSong">
 			</button>
 		</div>
 		<div id="player-song-time">
@@ -34,18 +34,18 @@
 	</div>
 	<div id="songs-control">
 		<button (click)="nextLoopType()" id="loop-type">
-			<img src="../../assets/loop-icon.svg" [style.borderBottom]="(loopType == 0) ? 'none' : '2px solid black'">
+			<img src="../../assets/loop-icon.svg" [style.borderBottom]="(loopType == 0) ? 'none' : '2px solid black'" alt="loop">
 			<p *ngIf="loopType == 2">1</p>
 		</button>
 		<button (click)="toggleQueueVisibility()">
-			<img src="../../assets/playlist-icon.svg" *ngIf="!visibleQueue">
-			<img src="../../assets/close-playlist-icon.svg" *ngIf="visibleQueue">
+			<img src="../../assets/playlist-icon.svg" *ngIf="!visibleQueue" alt="displayQueue">
+			<img src="../../assets/close-playlist-icon.svg" *ngIf="visibleQueue" alt="hideQueue">
 		</button>
 		<button (click)="toggleVolume()">
-			<img src="../../assets/volume-off-icon.svg" *ngIf="volumeDisabled">
-			<img src="../../assets/volume-zero-icon.svg" *ngIf="!volumeDisabled && audio.volume == 0">
-			<img src="../../assets/volume-low-icon.svg" *ngIf="!volumeDisabled && audio.volume > 0 && audio.volume < .3">
-			<img src="../../assets/volume-mid-icon.svg" *ngIf="!volumeDisabled && audio.volume > .3 && audio.volume < .7">
+			<img src="../../assets/volume-off-icon.svg" *ngIf="volumeDisabled" alt="volumeTurnedOff">
+			<img src="../../assets/volume-zero-icon.svg" *ngIf="!volumeDisabled && audio.volume == 0" alt="lowVolume">
+			<img src="../../assets/volume-low-icon.svg" *ngIf="!volumeDisabled && audio.volume > 0 && audio.volume < .3" alt="mediumVolume">
+			<img src="../../assets/volume-mid-icon.svg" *ngIf="!volumeDisabled && audio.volume > .3 && audio.volume < .7" alt="highVolum">
 			<img src="../../assets/volume-high-icon.svg" *ngIf="!volumeDisabled && audio.volume > .7">
 		</button>
 		<input type="range" (input)="changeVolume($event.target)" min="0" max="1" step=".001" [value]="audio.volume" id="volume-slider" [style.backgroundImage]="'linear-gradient(to right, #AAA 0%, #AAA ' + (audio.volume) * 100 + '%, #555 ' + (audio.volume) * 100 + '%, #555 100%)'">
