Feat: Lazy loading now working for album&song

--- a/frontend/src/app/song-page/components/song-page/song-page.component.html
+++ b/frontend/src/app/song-page/components/song-page/song-page.component.html
@@ -13,7 +13,7 @@
                 <p class="dot">-</p>
                 <p class="date"> {{this.song.releaseYear}} </p>
                 <p class="dot">-</p>
-                <p class="duration"> {{this.song.duration}}</p>
+                <p class="duration"> {{this.song.duration | nicetime}}</p>
             </div>
         </div> 
     </div>
