--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
@@ -2,14 +2,14 @@
     <div class="artist-infos">
         <h1 id="artist-name">{{artist.username}}</h1>
         <p id="monthly-audience">108 837 113 auditeurs mensuels</p>
-        <img class="back" [src]="artist.banner"> 
+        <img class="back" [src]="artist.profilePic"> 
     </div>
     <div class="more">
 
         <div class="section">
             <h2>Populaire</h2>
             <div class="list-style2">
-                <div *ngFor="let song of artistSongs; let index = index">
+                <div *ngFor="let song of artistSongs | slice:0:5; let index = index">
                     <app-song [song]="song" [index]="index+1"></app-song>
                 </div>
             </div>
