--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
@@ -68,6 +68,7 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            width: 100%;
         }
     }
 }
