--- a/frontend/src/app/utility/components/album/album.component.scss
+++ b/frontend/src/app/utility/components/album/album.component.scss
@@ -32,10 +32,10 @@
         flex-direction: column;
         font-family: 'Roboto', sans-serif;
         padding-left: 10px;
-
         .title {
             font-weight: bold;
             color: white;
+            white-space:nowrap;
         }
 
         .date {
