--- a/frontend/src/app/utility/components/album/album.component.scss
+++ b/frontend/src/app/utility/components/album/album.component.scss
@@ -34,13 +34,13 @@ a {
             height: 200px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+            cursor: pointer;
         }    
     }
     
     .album-infos {
         display: flex;
         flex-direction: column;
-        font-family: 'Roboto', sans-serif;
         padding-left: 10px;
         .title {
             font-weight: bold;
