started home page (popular songs albums artists)

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,6 +7,9 @@ body {
 
 * {
 	font-family: 'Source Sans Pro', 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 // Changing the scrollbar in all the website
